size reduction iterations

--- a/svm-abalone-notebook.ipynb
+++ b/svm-abalone-notebook.ipynb
@@ -515,6 +515,61 @@
     "\n",
     "Feature correlation can have negative effect on the modelling phase so it should be dealt with after this type of analysis. The easiest way is to delete or eliminate one of the perfectly correlated features. Another way is to use a dimension reduction algorithm such as Principle Component Analysis (PCA)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classification and reduction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Categorize Rings feature into young (0) and adult (1)\n",
+    "abalone['Rings'] = pd.cut(abalone['Rings'], [0,11,abalone['Rings'].max()], labels = [0,1])\n",
+    "# Split dataset for classification\n",
+    "y = abalone['Rings']\n",
+    "X = abalone.drop(['Rings', 'Sex', 'Diameter'], axis = 1)\n",
+    "X = scale_data(X, type_of_scale = 'Standard')\n",
+    "X_train, X_test, y_train, y_test = split_dataset(X, y, 0.20)\n",
+    "# Let's train\n",
+    "svmModel = svm.SVC(kernel=svmParams['kernel'], C=svmParams['C'], gamma=svmParams['gamma'], degree=svmParams['degree'], coef0=svmParams['coeff0'])\n",
+    "svmModel.fit(X_train, y_train)\n",
+    "print('Dual coef matrix: ', svmModel.dual_coef_.shape)\n",
+    "print('Support vector matrix: ', svmModel.support_vectors_.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check how the model performs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluate model accuracy\n",
+    "cross_score = cross_val_score(svmModel, X_train, y_train, cv=5)\n",
+    "print('Cross score: ', cross_score)\n",
+    "y_pred = np.array(svmModel.predict(X_test))\n",
+    "y_test = np.array(y_test)\n",
+    "print('Model accuracy and recall: ', model_accuracy(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Size reduction can be implemented by reducing the decimals places on the calculations. Multiplying all values by a power of 10 factor is out of the question since the calculations will most probably overflow."
+   ]
   }
  ],
  "metadata": {
@@ -533,7 +588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
