--- a/svm-abalone-notebook.ipynb
+++ b/svm-abalone-notebook.ipynb
@@ -16,9 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "# Global imports\n",
     "import sys\n",
@@ -46,6 +54,7 @@
     "from kernel import kernel_linear\n",
     "from kernel import kernel_poly\n",
     "from kernel import kernel_rbf\n",
+    "from save_model import *\n",
     "# Ignore warnings\n",
     "#np.set_printoptions(threshold=sys.maxsize)\n",
     "np.set_printoptions(suppress=True)\n",
@@ -63,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -125,124 +134,124 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3169</th>\n",
+       "      <th>1005</th>\n",
        "      <td>M</td>\n",
-       "      <td>0.560</td>\n",
-       "      <td>0.450</td>\n",
-       "      <td>0.155</td>\n",
-       "      <td>0.9125</td>\n",
-       "      <td>0.3595</td>\n",
-       "      <td>0.2710</td>\n",
-       "      <td>0.3500</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>620</th>\n",
-       "      <td>M</td>\n",
-       "      <td>0.345</td>\n",
-       "      <td>0.255</td>\n",
-       "      <td>0.080</td>\n",
-       "      <td>0.1690</td>\n",
-       "      <td>0.0600</td>\n",
-       "      <td>0.0425</td>\n",
-       "      <td>0.0540</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1999</th>\n",
-       "      <td>I</td>\n",
-       "      <td>0.350</td>\n",
-       "      <td>0.250</td>\n",
-       "      <td>0.070</td>\n",
-       "      <td>0.1605</td>\n",
-       "      <td>0.0715</td>\n",
-       "      <td>0.0335</td>\n",
-       "      <td>0.0460</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1569</th>\n",
-       "      <td>I</td>\n",
+       "      <td>0.605</td>\n",
        "      <td>0.475</td>\n",
-       "      <td>0.360</td>\n",
-       "      <td>0.145</td>\n",
-       "      <td>0.6325</td>\n",
-       "      <td>0.2825</td>\n",
-       "      <td>0.1370</td>\n",
-       "      <td>0.1900</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4083</th>\n",
-       "      <td>M</td>\n",
-       "      <td>0.570</td>\n",
-       "      <td>0.445</td>\n",
-       "      <td>0.160</td>\n",
-       "      <td>1.0145</td>\n",
-       "      <td>0.5160</td>\n",
-       "      <td>0.1640</td>\n",
-       "      <td>0.3000</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1933</th>\n",
-       "      <td>M</td>\n",
-       "      <td>0.620</td>\n",
-       "      <td>0.495</td>\n",
-       "      <td>0.195</td>\n",
-       "      <td>1.5145</td>\n",
-       "      <td>0.5790</td>\n",
-       "      <td>0.3460</td>\n",
-       "      <td>0.5195</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4069</th>\n",
-       "      <td>I</td>\n",
-       "      <td>0.455</td>\n",
-       "      <td>0.335</td>\n",
-       "      <td>0.105</td>\n",
-       "      <td>0.4055</td>\n",
-       "      <td>0.1750</td>\n",
-       "      <td>0.0920</td>\n",
-       "      <td>0.1185</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3785</th>\n",
-       "      <td>M</td>\n",
-       "      <td>0.625</td>\n",
-       "      <td>0.495</td>\n",
        "      <td>0.155</td>\n",
-       "      <td>1.1770</td>\n",
-       "      <td>0.5055</td>\n",
-       "      <td>0.2780</td>\n",
-       "      <td>0.3450</td>\n",
+       "      <td>1.1610</td>\n",
+       "      <td>0.5720</td>\n",
+       "      <td>0.2455</td>\n",
+       "      <td>0.2750</td>\n",
        "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3442</th>\n",
-       "      <td>M</td>\n",
-       "      <td>0.480</td>\n",
-       "      <td>0.370</td>\n",
-       "      <td>0.130</td>\n",
-       "      <td>0.6430</td>\n",
-       "      <td>0.3490</td>\n",
-       "      <td>0.1155</td>\n",
-       "      <td>0.1350</td>\n",
+       "      <th>2223</th>\n",
+       "      <td>F</td>\n",
+       "      <td>0.555</td>\n",
+       "      <td>0.455</td>\n",
+       "      <td>0.180</td>\n",
+       "      <td>0.9580</td>\n",
+       "      <td>0.2960</td>\n",
+       "      <td>0.1950</td>\n",
+       "      <td>0.3900</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1329</th>\n",
+       "      <td>I</td>\n",
+       "      <td>0.570</td>\n",
+       "      <td>0.450</td>\n",
+       "      <td>0.135</td>\n",
+       "      <td>0.7940</td>\n",
+       "      <td>0.3815</td>\n",
+       "      <td>0.1415</td>\n",
+       "      <td>0.2450</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32</th>\n",
+       "      <th>2750</th>\n",
+       "      <td>I</td>\n",
+       "      <td>0.510</td>\n",
+       "      <td>0.385</td>\n",
+       "      <td>0.145</td>\n",
+       "      <td>0.7665</td>\n",
+       "      <td>0.3985</td>\n",
+       "      <td>0.1400</td>\n",
+       "      <td>0.1805</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3697</th>\n",
        "      <td>M</td>\n",
-       "      <td>0.665</td>\n",
+       "      <td>0.650</td>\n",
+       "      <td>0.510</td>\n",
+       "      <td>0.175</td>\n",
+       "      <td>1.1550</td>\n",
+       "      <td>0.4955</td>\n",
+       "      <td>0.2025</td>\n",
+       "      <td>0.3850</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>581</th>\n",
+       "      <td>I</td>\n",
+       "      <td>0.550</td>\n",
+       "      <td>0.425</td>\n",
+       "      <td>0.150</td>\n",
+       "      <td>0.8060</td>\n",
+       "      <td>0.3760</td>\n",
+       "      <td>0.1710</td>\n",
+       "      <td>0.2450</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3627</th>\n",
+       "      <td>M</td>\n",
+       "      <td>0.715</td>\n",
        "      <td>0.525</td>\n",
-       "      <td>0.165</td>\n",
-       "      <td>1.3380</td>\n",
-       "      <td>0.5515</td>\n",
-       "      <td>0.3575</td>\n",
-       "      <td>0.3500</td>\n",
+       "      <td>0.200</td>\n",
+       "      <td>1.8900</td>\n",
+       "      <td>0.9500</td>\n",
+       "      <td>0.4360</td>\n",
+       "      <td>0.4305</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1713</th>\n",
+       "      <td>M</td>\n",
+       "      <td>0.645</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>0.175</td>\n",
+       "      <td>1.3375</td>\n",
+       "      <td>0.5540</td>\n",
+       "      <td>0.3080</td>\n",
+       "      <td>0.4150</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>592</th>\n",
+       "      <td>I</td>\n",
+       "      <td>0.525</td>\n",
+       "      <td>0.410</td>\n",
+       "      <td>0.175</td>\n",
+       "      <td>0.8740</td>\n",
+       "      <td>0.3585</td>\n",
+       "      <td>0.2070</td>\n",
+       "      <td>0.2050</td>\n",
        "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3725</th>\n",
+       "      <td>M</td>\n",
+       "      <td>0.495</td>\n",
+       "      <td>0.375</td>\n",
+       "      <td>0.155</td>\n",
+       "      <td>0.9760</td>\n",
+       "      <td>0.4500</td>\n",
+       "      <td>0.2285</td>\n",
+       "      <td>0.2475</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -250,31 +259,31 @@
       ],
       "text/plain": [
        "     Sex  Length  Diameter  Height  Whole weight  Shucked weight  \\\n",
-       "3169   M   0.560     0.450   0.155        0.9125          0.3595   \n",
-       "620    M   0.345     0.255   0.080        0.1690          0.0600   \n",
-       "1999   I   0.350     0.250   0.070        0.1605          0.0715   \n",
-       "1569   I   0.475     0.360   0.145        0.6325          0.2825   \n",
-       "4083   M   0.570     0.445   0.160        1.0145          0.5160   \n",
-       "1933   M   0.620     0.495   0.195        1.5145          0.5790   \n",
-       "4069   I   0.455     0.335   0.105        0.4055          0.1750   \n",
-       "3785   M   0.625     0.495   0.155        1.1770          0.5055   \n",
-       "3442   M   0.480     0.370   0.130        0.6430          0.3490   \n",
-       "32     M   0.665     0.525   0.165        1.3380          0.5515   \n",
+       "1005   M   0.605     0.475   0.155        1.1610          0.5720   \n",
+       "2223   F   0.555     0.455   0.180        0.9580          0.2960   \n",
+       "1329   I   0.570     0.450   0.135        0.7940          0.3815   \n",
+       "2750   I   0.510     0.385   0.145        0.7665          0.3985   \n",
+       "3697   M   0.650     0.510   0.175        1.1550          0.4955   \n",
+       "581    I   0.550     0.425   0.150        0.8060          0.3760   \n",
+       "3627   M   0.715     0.525   0.200        1.8900          0.9500   \n",
+       "1713   M   0.645     0.500   0.175        1.3375          0.5540   \n",
+       "592    I   0.525     0.410   0.175        0.8740          0.3585   \n",
+       "3725   M   0.495     0.375   0.155        0.9760          0.4500   \n",
        "\n",
        "      Viscera weight  Shell weight  Rings  \n",
-       "3169          0.2710        0.3500     10  \n",
-       "620           0.0425        0.0540     10  \n",
-       "1999          0.0335        0.0460      6  \n",
-       "1569          0.1370        0.1900      8  \n",
-       "4083          0.1640        0.3000     10  \n",
-       "1933          0.3460        0.5195     15  \n",
-       "4069          0.0920        0.1185      8  \n",
-       "3785          0.2780        0.3450      9  \n",
-       "3442          0.1155        0.1350      8  \n",
-       "32            0.3575        0.3500     18  "
+       "1005          0.2455        0.2750      9  \n",
+       "2223          0.1950        0.3900     14  \n",
+       "1329          0.1415        0.2450      8  \n",
+       "2750          0.1400        0.1805      8  \n",
+       "3697          0.2025        0.3850     12  \n",
+       "581           0.1710        0.2450     14  \n",
+       "3627          0.4360        0.4305     10  \n",
+       "1713          0.3080        0.4150     10  \n",
+       "592           0.2070        0.2050     18  \n",
+       "3725          0.2285        0.2475      9  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +482,7 @@
        "0         Length -0.638368"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -559,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1037,6 +1046,79 @@
     "        else:\n",
     "            y_pred_looped.append(0)\n",
     "    return np.array(y_pred_looped)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data export method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To export the parameter values of the trained models, a text file will be used. Into this file, will be written:\n",
+    "- Support vectors\n",
+    "- Alpha (Lagrange Multipliers)\n",
+    "- Bias\n",
+    "- Gamma (for polynomial and rbf kernel)\n",
+    "- Degree (for polynomial kernel)\n",
+    "\n",
+    "This values will be written in the order presented in the listing above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_model_linear(SV, Alphas, Bias):\n",
+    "\n",
+    "    with open('linear.out', 'a') as f:\n",
+    "        dataToWrite = SV\n",
+    "        np.savetxt(f, dataToWrite,'%5.3f', delimiter=',')\n",
+    "        f.write(\"EOP\\n\")\n",
+    "        dataToWrite = Alphas.transpose()\n",
+    "        np.savetxt(f, dataToWrite, '%5.3f', delimiter=',')\n",
+    "        f.write(\"EOP\\n\")\n",
+    "        dataToWrite = Bias\n",
+    "        np.savetxt(f, dataToWrite,'%5.3f', delimiter=',')\n",
+    "        f.write(\"EOP\\n\")\n",
+    "\n",
+    "def save_model_poly (SV, Alphas, Bias, Gamma, Degree):\n",
+    "    \n",
+    "    with open('poly.out', 'a') as f:\n",
+    "        dataToWrite = SV\n",
+    "        np.savetxt(f, dataToWrite,'%5.3f', delimiter=',')\n",
+    "        f.write(\"EOP\\n\")\n",
+    "        dataToWrite = Alphas.transpose()\n",
+    "        np.savetxt(f, dataToWrite, '%5.3f', delimiter=',')\n",
+    "        f.write(\"EOP\\n\")\n",
+    "        dataToWrite = Bias\n",
+    "        np.savetxt(f, dataToWrite,'%5.3f', delimiter=',')\n",
+    "        f.write(\"EOP\\n\")\n",
+    "        f.write(str(Gamma) + \"\\n\")\n",
+    "        f.write(\"EOP\\n\")\n",
+    "        f.write(str(Degree) + \"\\n\")\n",
+    "        f.write(\"EOP\\n\")\n",
+    "\n",
+    "def save_model_rbf (SV, Alphas, Bias, Gamma):\n",
+    "\n",
+    "    with open('rbf.out', 'a') as f:\n",
+    "        dataToWrite = SV\n",
+    "        np.savetxt(f, dataToWrite,'%5.3f', delimiter=',')\n",
+    "        f.write(\"EOP\\n\")\n",
+    "        dataToWrite = Alphas.transpose()\n",
+    "        np.savetxt(f, dataToWrite, '%5.3f', delimiter=',')\n",
+    "        f.write(\"EOP\\n\")\n",
+    "        dataToWrite\t = Bias\n",
+    "        np.savetxt(f, dataToWrite,'%5.3f', delimiter=',')\n",
+    "        f.write(\"EOP\\n\")\n",
+    "        f.write(str(Gamma) + \"\\n\")\n",
+    "        f.write(\"EOP\\n\")"
    ]
   }
  ],
